# hwmon

./: .gitignore  Cargo.toml  Makefile  build.bat  build.rs  hwmon-test.wsb  package.bat  release.sh
.claude/: settings.local.json
.claude/skills/benchmark/: SKILL.md
.claude/skills/browse/: SKILL.md
.claude/skills/careful/: SKILL.md
.claude/skills/cso/: SKILL.md
.claude/skills/freeze/: SKILL.md
.claude/skills/guard/: SKILL.md
.claude/skills/opengstack-upgrade/: SKILL.md
.claude/skills/setup-browser-cookies/: SKILL.md
.claude/skills/unfreeze/: SKILL.md
dist-win/hwmon/: .gitignore  Cargo.toml  README.md  install.bat
dist-win/hwmon/hwmon-electron/: package.json
dist-win/hwmon/src/: display.rs  gui.rs  main.rs  memory.rs  types.rs
hwmon-electron/: index.html  main.js  package-lock.json
hwmon-v0.1.0-darwin-arm64/: hwmon  install.bat  install.sh
src/: cpu.rs  gpu.rs  gui.rs  main.rs
